bug 324198: fold ics lines before adding a newline. r=ctalbert