calendar/libical/src/libical/icalproperty.c
@@ -336,6 +336,7 @@ get_next_line_start (char *line_start, int chars_left)
  *  It returns a tmp buffer.  NOTE: I'm not sure if it matters if we
  *  split a line in the middle of a UTF-8 character. It probably won't
  *  look nice in a text editor. 
+ *  This will add the trailing newline as well
  */
 static char*
 fold_property_line (char *text)
@@ -388,6 +389,8 @@ fold_property_line (char *text)
 	chars_left -= (next_line_start - line_start);
 	line_start = next_line_start;
     }
+
+    icalmemory_append_string (&buf, &buf_ptr, &buf_size, newline);
 
     /* Copy it to a temporary buffer, and then free it. */
     out_buf = icalmemory_tmp_buffer (strlen (buf) + 1);
@@ -537,12 +540,11 @@ icalproperty_as_ical_string (icalproperty* prop)
 	
     }
     
-    icalmemory_append_string(&buf, &buf_ptr, &buf_size, newline);
-
     /* Now, copy the buffer to a tmp_buffer, which is safe to give to
        the caller without worring about de-allocating it. */
 
-    /* We now use a function to fold the line properly every 75 characters. */
+    /* We now use a function to fold the line properly every 75 characters.
+       That function also adds the newline for us. */
     out_buf = fold_property_line (buf);
 
     icalmemory_free_buffer(buf);
